--- a/src/static/css/Nabvar.css
+++ b/src/static/css/Nabvar.css
@@ -1,12 +1,101 @@
-/* .navbar{
-    background-color: white;
-    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.3);
+:root{
+  --fontRoboto: 'Roboto Mono', monospace;
+  --fontOpenSans: 'Open Sans', sans-serif;
 }
-.navbar-nav{
-    column-gap: 30px;
+nav {
+  background: #FFFFFF;
+  height: 70px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.1);
 }
-.navbar-light .navbar-nav .nav-link{
-    color: black;
-    font-family: var(-fontRoboto);
-    font-weight: 600;
-} */
+
+label.logo {
+  width: 100px;
+  height: 60px;
+}
+label.logo img{
+  width: 100%;
+  height: 100%;
+}
+nav ul {
+  display: flex;
+  column-gap: 30px;
+}
+
+nav ul li a {
+  color: black;
+  font-size: 18px;
+  font-family: var(--fontOpenSans);
+  font-weight: 600;
+  letter-spacing: 1px;
+  line-height: 32px;
+  transition: all .3s ease;
+  margin: 3px 15px;
+  display: block;
+}
+nav ul li a:hover{
+  color: grey;
+}
+.checkbtn {
+  font-size: 30px;
+  color: black;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
+
+#check {
+  display: none;
+}
+@media (max-width: 952px) {
+  label.logo {
+    font-size: 30px;
+    padding-left: 50px;
+  }
+
+  nav ul li a {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 858px) {
+  .checkbtn {
+    display: block;
+  }
+
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #2c3e50;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+  }
+
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+
+  nav ul li a {
+    font-size: 20px;
+  }
+
+  a:hover,
+  a.active {
+    background: none;
+    color: #0082e6;
+  }
+
+  #check:checked~ul {
+    left: 0;
+  }
+}
