--- a/src/static/css/Nabvar.css
+++ b/src/static/css/Nabvar.css
@@ -10,10 +10,12 @@ nav {
   align-items: center;
   justify-content: space-between;
   box-shadow: 0 2px 6px 1px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  padding: 0 14px;
 }
 
 label.logo {
-  width: 100px;
+  width: 60px;
   height: 60px;
 }
 label.logo img{
@@ -26,18 +28,21 @@ nav ul {
 }
 
 nav ul li a {
-  color: black;
+  color: rgb(22, 209, 22);
   font-size: 18px;
   font-family: var(--fontOpenSans);
   font-weight: 600;
   letter-spacing: 1px;
   line-height: 32px;
   transition: all .3s ease;
-  margin: 3px 15px;
   display: block;
+  padding: 1px 8px;
+  border-radius: 16px;
+  text-transform: lowercase;
 }
 nav ul li a:hover{
-  color: grey;
+  color: #ffffff;
+  background-color: rgb(22, 209, 22);
 }
 .checkbtn {
   font-size: 30px;
@@ -52,20 +57,68 @@ nav ul li a:hover{
 #check {
   display: none;
 }
-@media (max-width: 952px) {
-  label.logo {
-    font-size: 30px;
-    padding-left: 50px;
-  }
 
-  nav ul li a {
-    font-size: 16px;
-  }
+.lang{
+  display: flex;
+  width: 120px;
+  height: 100%;
+  align-items: center;
+  border-radius: 16px;
+  background-color: green;
+  border: 1px solid green;
+  justify-content: space-between;
 }
-
-@media (max-width: 858px) {
+.uz{
+  display: flex;
+  column-gap: 5px;
+  width: 50%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  border-top-left-radius: 16px;
+  border-bottom-left-radius: 16px;
+  border-right: 2px solid white;
+  cursor: pointer;
+}
+.uz:hover{
+  background-color: rgb(22, 209, 22);
+}
+.ru{
+  display: flex;
+  column-gap: 5px;
+  width: 50%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  border-top-right-radius: 16px;
+  border-bottom-right-radius: 16px;
+  cursor: pointer;
+}
+.ru:hover{
+  background-color: rgb(22, 209, 22);
+}
+.lang .uz p{
+  color: white;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 0.2rem;
+  font-family: var(--fontOpenSans);
+  font-weight: 600;
+}
+.lang .ru p{
+  color: white;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 0.2rem;
+  font-family: var(--fontOpenSans);
+  font-weight: 600;
+}
+@media (max-width: 992px) {
   .checkbtn {
     display: block;
+  }
+  .checkbtn:active {
+    color: rgb(22, 209, 22);
   }
 
   ul {
@@ -73,29 +126,27 @@ nav ul li a:hover{
     width: 100%;
     height: 100vh;
     background: #2c3e50;
-    top: 80px;
+    top: 70px;
     left: -100%;
     text-align: center;
     transition: all .5s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 8px;
   }
-
   nav ul li {
     display: block;
-    margin: 50px 0;
     line-height: 30px;
   }
-
   nav ul li a {
-    font-size: 20px;
-  }
-
-  a:hover,
-  a.active {
-    background: none;
-    color: #0082e6;
+    font-size: 16px;
   }
 
   #check:checked~ul {
     left: 0;
   }
 }
+
+
