--- a/src/static/css/Companiya.css
+++ b/src/static/css/Companiya.css
@@ -6,7 +6,9 @@
     position: relative;
     top: 70px;
 }
-.video_player video{
+.video_player {
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
     box-shadow: 3px 3px 9px 2px rgba(0, 0, 0, 0.1);
 }
